--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,11 @@ body {
   padding: 15px 22px 16px;
   font-size: 22px;
 }
+
+body[data-touch='true'] header > h1 {
+  display: none;
+}
+
+body[data-touch='true'] .todoapp {
+  margin: 20px 0;
+}
